# cpp-template-small

./: CMakeLists.txt
source/demo/: CMakeLists.txt
